# kubeflow-manifests

./: .gitignore
hack/build-images/: applications.arrikto-public.yaml  build_images.py  pyproject.toml
istio-1-5-7/: profile.yaml
kfdef/: kfctl_ekf.v1.0.0.yaml  kfctl_gcp_iap.yaml  kfctl_minikf.0.7.0.yaml  kfctl_minikf.v1.0.0.yaml
namespace-resources/: template-kustomization.yaml
tests/: admission-webhook-webhook-base_test.go  admission-webhook-webhook-overlays-application_test.go  admission-webhook-webhook-overlays-cert-manager_test.go  aws-aws-alb-ingress-controller-overlays-application_test.go  common-centraldashboard-base_test.go  common-centraldashboard-overlays-application_test.go  common-centraldashboard-overlays-istio_test.go  common-spartakus-overlays-application_test.go  gcp-cloud-endpoints-overlays-application_test.go  jupyter-jupyter-web-app-base_test.go  jupyter-jupyter-web-app-overlays-application_test.go  jupyter-jupyter-web-app-overlays-istio_test.go  jupyter-notebook-controller-base_test.go  jupyter-notebook-controller-overlays-application_test.go  jupyter-notebook-controller-overlays-istio_test.go  katib-katib-controller-base_test.go  katib-katib-controller-overlays-application_test.go  katib-katib-controller-overlays-ibm-storage-config_test.go  katib-katib-controller-overlays-istio_test.go  kubebench-overlays-application_test.go  mxnet-job-mxnet-operator-overlays-application_test.go  profiles-base_test.go  profiles-overlays-application_test.go  profiles-overlays-debug_test.go  profiles-overlays-devices_test.go  profiles-overlays-istio_test.go  (+6 more)
(+174 files in other folders)
