[tool.poetry]
name = "build-images"
version = "0.1.0"
description = ""
authors = ["Yannis Zarkadas <yanniszark@arrikto.com>"]

[tool.poetry.dependencies]
python = "^3.6"
docker = "^4.2.0"
"ruamel.yaml" = "^0.16.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
